# trinket

./: CLAUDE.md  Cargo.toml  README.md  tauri.conf.json  trinket.sln
.claude/: settings.local.json
capabilities/: default.json
src/: commands.rs  db.rs  main.rs
trinket/: Add.Designer.cs  Add.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Get.Designer.cs  Get.cs  Get.resx  Program.cs  trinket.csproj
trinket/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ui/: add.html  get.html
