[package]
name = "trinket"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
htmd = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

