[package]
name = "trinket"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-global-shortcut = "2.3.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
arboard = "3.6.1"
htmd = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
dirs = "6.0.0"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
